Ingress-LoadBalancer/ingress-LB.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: my-ingress
spec:
 rules:
 - host: mywebsite.com
   http:
     paths:
     - pathType: Prefix
       path: "/app1"
       backend:
         service:
           name: app1-service
           port:
             number: 8080
 - host: mywebsite.com
   http:
     paths:
     - pathType: Prefix
       path: "/app2"
       backend:
         service:
           name: app2-service
           port:
             number: 8080
