Ingress-LoadBalancer/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
spec:
 rules:
 - http:
     paths:
     - pathType: Prefix
       path: "/"
       backend:
         service:
           name: nginx-service
           port:
             number: 80
